# EmployeeCpp

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  LICENSE.md  Readme.md  business-rules.txt  employee-calendars.txt  employee-data.txt
src/: AppointmentProvider.h  Calendar.cpp  Calendar.h  CalendarFileReader.cpp  CalendarFileReader.h  CalendarReader.h  Employee.cpp  Employee.h  EmployeeDataFileReader.cpp  EmployeeDataFileReader.h  EmployeeDataReader.h  EmployeeFactory.cpp  EmployeeFactory.h  EmployeeTest.cpp  FileAppointmentProvider.cpp  FileAppointmentProvider.h  Location.cpp  Location.h  Main.cpp  Name.cpp  Name.h  NameFileReader.cpp  NameFileReader.h  NameReader.h  Time.cpp  Time.h
